--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "bootstrap": "^3.3.7",
+    "chalk": "^1.1.3",
     "express": "^4.14.1",
+    "method-override": "^2.3.7",
     "mysql": "^2.13.0",
+    "nunjucks": "^3.0.0",
     "path": "^0.12.7",
     "sqlite3": "^3.1.8",
     "swig": "^1.4.2"
